--- a/ext/selma/Cargo.toml
+++ b/ext/selma/Cargo.toml
@@ -4,10 +4,12 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-magnus = { git = "https://github.com/gjtorikian/magnus", branch = "main" } # waiting for release with full rb-sys backend
-lol_html = { git = "https://github.com/cloudflare/lol-html", rev = "1a1ab2e2bf896f815fe8888ed78ccdf46d7c6b85" }
+magnus = "0.4"
+lol_html = { git = "https://github.com/cloudflare/lol-html", rev = "b09b7afbbcecb944f4bf338b0e669c430d91061e" }
 html-escape = "0.2"
 enum-iterator = "1.2"
+log = "0.4"
+escapist = "0.0.1"
 
 [lib]
 name = "selma"
