--- a/.github/workflows/tag_and_release.yml
+++ b/.github/workflows/tag_and_release.yml
@@ -1,7 +1,6 @@
 name: Tag and Release
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
@@ -9,11 +8,66 @@ on:
       - "lib/selma/version.rb"
 
 jobs:
+  native_gem:
+    name: Compile native gem
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          - x86_64-linux
+          - aarch64-linux
+
+          - x86_64-darwin
+          - arm64-darwin
+
+          - x64-mingw-ucrt
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: oxidize-rb/actions/setup-ruby-and-rust@main
+        with:
+          ruby-version: "3.1"
+          rubygems: latest
+          bundler-cache: false
+          cargo-cache: true
+          cargo-vendor: true
+
+      - uses: oxidize-rb/cross-gem-action@main
+        with:
+          platform: ${{ matrix.platform }}
+          env: |
+            RUBY_CC_VERSION=3.1.0
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: cross-gem
+          path: pkg/
+
+      - name: Display structure of built gems
+        run: ls -R
+        working-directory: pkg/
+
+      - name: Publish to RubyGems
+        working-directory: pkg/
+        env:
+          GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_API_BOT_KEY}}
+        run: |
+          mkdir -p $HOME/.gem
+          touch $HOME/.gem/credentials
+          chmod 0600 $HOME/.gem/credentials
+          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+          for i in *.gem; do
+            if [ -f "$i" ]
+            then
+              gem push "$i" || true
+            fi
+          done
+
   release:
+    needs: ["native_gem"]
     env:
-      GEM_NAME: selma
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_API_BOT_KEY }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,6 +75,7 @@ jobs:
       - name: Set up Ruby 3.1
         uses: ruby/setup-ruby@v1
         with:
+          rubygems: latest
           ruby-version: 3.1
           bundler-cache: true
 
@@ -44,19 +99,15 @@ jobs:
         id: changelog
         run: script/generate_changelog
 
+      - name: Commit & Push Changelog
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "Actions Auto Build"
+          git add -f CHANGELOG.md
+          git commit -m "docs: update changelog" || true
+          git push
       - name: Publish release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create v${{ steps.version-label.outputs.version }} --generate-notes
-
-      - name: Publish to RubyGems
-        run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          bundle exec rake build
-          for gem in pkg/selma-${{ steps.version-label.outputs.version }}*.gem ; do
-            gem push "$gem" --host https://rubygems.org
-          done
