--- a/ext/selma/Cargo.toml
+++ b/ext/selma/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 enum-iterator = "1.2"
 escapist = "0.0.1"
 magnus = "0.4"
-lol_html = { git = "https://github.com/cloudflare/lol-html", rev = "b09b7afbbcecb944f4bf338b0e669c430d91061e" }
+lol_html = "0.3"
 
 [lib]
 name = "selma"
