--- a/.github/workflows/cruby-build-and-install.yml
+++ b/.github/workflows/cruby-build-and-install.yml
@@ -31,7 +31,7 @@ jobs:
 
       - uses: oxidize-rb/actions/setup-ruby-and-rust@main
         with:
-          ruby-version: "3.1"
+          ruby-version: "3.2"
           rubygems: latest
           bundler-cache: false
           cargo-cache: true
@@ -40,8 +40,7 @@ jobs:
       - uses: oxidize-rb/cross-gem-action@main
         with:
           platform: ${{ matrix.platform }}
-          env: |
-            RUBY_CC_VERSION=3.1.0
+          ruby-versions: '3.1, 3.2'
 
       - name: "Test gem build"
         run: |
@@ -58,7 +57,7 @@ jobs:
      strategy:
        fail-fast: false
        matrix:
-         ruby: ["3.1"]
+         ruby: ["3.1", "3.2"]
      runs-on: ubuntu-latest
      steps:
        - uses: actions/checkout@v3
@@ -79,7 +78,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["3.1"]
+        ruby: ["3.1", "3.2"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -106,7 +105,7 @@ jobs:
      strategy:
        fail-fast: false
        matrix:
-         ruby: ["3.1"]
+         ruby: ["3.1", "3.2"]
      runs-on: macos-latest
      steps:
        - uses: actions/checkout@v3
