--- a/.github/workflows/tag_and_release.yml
+++ b/.github/workflows/tag_and_release.yml
@@ -1,11 +1,19 @@
 name: Tag and Release
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
     paths:
-      - "lib/selma/version.rb"
+      - "lib/commonmarker/version.rb"
+
+env:
+  CACHE_KEY_PREFIX: "cruby-v1-"
+
+# "3.1,3.2" # SUPPORTED_RUBY_VERSIONS
+# ["3.1", "3.2"] # SUPPORTED_RUBY_MATRIX
+# "3.2" # LATEST_RUBY_VERSION
 
 jobs:
   native_gem:
@@ -25,43 +33,27 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: oxidize-rb/actions/setup-ruby-and-rust@main
+      - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.2"
-          rubygems: latest
-          bundler-cache: false
-          cargo-cache: true
-          cargo-vendor: true
+          ruby-version: "3.2" # LATEST_RUBY_VERSION
 
-      - uses: oxidize-rb/cross-gem-action@main
+      - uses: oxidize-rb/actions/cross-gem@v1
+        id: cross-gem
         with:
           platform: ${{ matrix.platform }}
-          ruby-versions: '3.1, 3.2'
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: cross-gem
-          path: pkg/
-
-      - name: Display structure of built gems
-        run: ls -R
-        working-directory: pkg/
+          ruby-versions: "3.1,3.2" # SUPPORTED_RUBY_VERSIONS
 
       - name: Publish to RubyGems
-        working-directory: pkg/
         env:
           GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_API_BOT_KEY}}
+          GEM_OUTPUT_PATH: ${{ steps.cross-gem.outputs.gem-path }}
         run: |
           mkdir -p $HOME/.gem
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          for i in *.gem; do
-            if [ -f "$i" ]
-            then
-              gem push "$i" || true
-            fi
-          done
+          gem push "${GEM_OUTPUT_PATH}" || true
+          echo "Pushed ${GEM_OUTPUT_PATH}"
 
   release:
     needs: ["native_gem"]
@@ -75,7 +67,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           rubygems: latest
-          ruby-version: 3.2
+          ruby-version: "3.2" # LATEST_RUBY_VERSION
           bundler-cache: true
 
       - name: Configure Git
@@ -86,7 +78,7 @@ jobs:
       - name: Get current version
         id: version-label
         run: |
-          VERSION=$(grep VERSION lib/selma/version.rb | head -n 1 | cut -d'"' -f2)
+          VERSION=$(grep VERSION lib/commonmarker/version.rb | head -n 1 | cut -d'"' -f2)
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
 
       - name: Create tag
@@ -105,6 +97,7 @@ jobs:
           git add -f CHANGELOG.md
           git commit -m "docs: update changelog" || true
           git push
+
       - name: Publish release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
