--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,8 +52,12 @@ jobs:
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          gem push "${GEM_OUTPUT_PATH}" || true
-          echo "Pushed ${GEM_OUTPUT_PATH}"
+          for i in *.gem; do
+            if [ -f "$i" ]
+            then
+              gem push "$i" || true
+            fi
+          done
 
   release:
     needs: ["native_gem"]
