--- a/ext/selma/Cargo.toml
+++ b/ext/selma/Cargo.toml
@@ -2,6 +2,8 @@
 name = "selma"
 version = "1.0.0"
 edition = "2021"
+rust-version = "1.75.0"
+publish = false
 
 [dependencies]
 enum-iterator = "1.4"
