--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -11,3 +11,5 @@ jobs:
   dependabot:
     uses: yettoapp/actions/.github/workflows/automerge_dependabot.yml@main
     secrets: inherit
+    with: 
+      automerge: true
