update magnus/rb-sys dep

--- a/ext/selma/Cargo.toml
+++ b/ext/selma/Cargo.toml
@@ -8,7 +8,10 @@ publish = false
 [dependencies]
 enum-iterator = "2.1"
 escapist = "0.0.2"
-magnus = "0.6"
+magnus = { version = "0.6", features = ["rb-sys"] }
+rb-sys = { version = "*", default-features = false, features = [
+    "stable-api-compiled-fallback",
+] }
 lol_html = "1.2"
 
 [lib]
