--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test Build
 
 on:
   workflow_dispatch:
@@ -8,8 +8,8 @@ on:
 
 jobs:
   build:
-    uses: yettoapp/actions/.github/workflows/ruby_rust_test_build.yml@main
+    uses: gjtorikian/actions/.github/workflows/ruby_rust_test_build.yml@main
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
     with:
-      include_musl: false
+      include_musl: true
